@@ -258,7 +258,8 @@ inline bool do_intersect(
     const Line_2<K> &p1,
     const Iso_rectangle_2<K> &p2)
 {
-  return typename K::Do_intersect_2()(p1, p2);
+  typedef typename K::Do_intersect_2 Do_intersect;
+  return Do_intersect()(p1, p2);
 }
 
 template <class K>
@@ -266,21 +267,24 @@ inline bool do_intersect(
     const Iso_rectangle_2<K> &p1,
     const Line_2<K> &p2)
 {
-  return typename K::Do_intersect_2()(p2, p1);
+  typedef typename K::Do_intersect_2 Do_intersect;
+  return Do_intersect()(p2, p1);
 }
 
 template <class K>
 Object
 intersection(const Line_2<K> &line, const Iso_rectangle_2<K> &iso)
 {
-  return typename K::Intersect_2()(line, iso);
+  typedef typename K::Intersect_2 Intersect;
+  return Intersect()(line, iso);
 }
 
 template <class K>
 inline Object
 intersection(const Iso_rectangle_2<K> &iso, const Line_2<K> &line)
 {
-    return typename K::Intersect_2()(line, iso);
+  typedef typename K::Intersect_2 Intersect;
+    return Intersect()(line, iso);
 }
 
 CGAL_END_NAMESPACE
