@@ -88,7 +88,8 @@ bool
 do_intersect(const Iso_rectangle_2<K> &iso,
 	     const Point_2<K> &pt)
 {
-  return typename K::Do_intersect_2()(pt, iso);
+  typedef typename K::Do_intersect_2 Do_intersect;
+  return Do_intersect()(pt, iso);
 }
 
 template <class K>
@@ -97,7 +98,8 @@ bool
 do_intersect(const Point_2<K> &pt,
 	     const Iso_rectangle_2<K> &iso)
 {
-  return typename K::Do_intersect_2()(pt, iso);
+  typedef typename K::Do_intersect_2 Do_intersect;
+  return Do_intersect()(pt, iso);
 }
 
 template <class K>
@@ -106,7 +108,8 @@ Object
 intersection(const Iso_rectangle_2<K> &iso,
 	     const Point_2<K> &pt)
 {
-  return typename K::Intersect_2()(pt, iso);
+  typedef typename K::Intersect_2 Intersect;
+  return intersect()(pt, iso);
 }
 template <class K>
 inline 
@@ -114,7 +117,8 @@ Object
 intersection(const Point_2<K> &pt,
 	     const Iso_rectangle_2<K> &iso)
 {
-  return typename K::Intersect_2()(pt, iso);
+  typedef typename K::Intersect_2 Intersect;
+  return Intersect()(pt, iso);
 }
 CGAL_END_NAMESPACE
 
