@@ -88,7 +88,8 @@ inline
 bool
 do_intersect(const Ray_2<K> &ray, const Point_2<K> &pt)
 {
-  return typename K::do_intersect_2()(pt, ray);
+  typedef typename K::Do_intersect_2 Do_intersect;
+  return Do_intersect()(pt, ray);
 }
 
 template <class K>
@@ -96,7 +97,8 @@ inline
 bool
 do_intersect(const Point_2<K> &pt, const Ray_2<K> &ray)
 {
-  return typename K::Do_intersect_2()(pt, ray);
+  typedef typename K::Do_intersect_2 Do_intersect;
+  return Do_intersect()(pt, ray);
 }
 
 
@@ -104,14 +106,16 @@ template <class K>
 inline Object
 intersection(const Ray_2<K> &ray, const Point_2<K> &pt)
 {
-  return typename K::Intersect_2()(pt, ray);
+  typedef typename K::Intersect_2 Intersect;
+  return Intersect()(pt, ray);
 }
 
 template <class K>
 inline Object
 intersection(const Point_2<K> &pt, const Ray_2<K> &ray)
 {
-  return typename K::Intersect_2()(pt, ray);
+  typedef typename K::Intersect_2 Intersect;
+  return Intersect()(pt, ray);
 }
 
 CGAL_END_NAMESPACE
