@@ -195,7 +195,8 @@ inline
 bool
 do_intersect(const Triangle_2<K> &tr, const Point_2<K> &pt)
 {
-  return typename K::Do_intersect_2()(pt, tr);
+  typedef typename K::Do_intersect_2 Do_intersect;
+  return Do_intersect()(pt, tr);
 }
 
 template <class K>
@@ -203,21 +204,24 @@ inline
 bool 
 do_intersect(const Point_2<K> &pt, const Triangle_2<K> &tr)
 {
-  return typename K::Do_intersect_2()(pt, tr);
+  typedef typename K::Do_intersect_2 Do_intersect;
+  return Do_intersect()(pt, tr);
 }
 
 template <class K>
 inline Object
 intersection(const Triangle_2<K> &tr, const Point_2<K> &pt)
 {
-    return typename K::Intersect_2()(pt, tr);
+  typedef typename K::Intersect_2 Intersect;
+  return Intersect()(pt, tr);
 }
 
 template <class K>
 inline Object
 intersection(const Point_2<K> &pt, const Triangle_2<K> &tr)
 {
-    return typename K::Intersect_2()(pt, tr);
+  typedef typename K::Intersect_2 Intersect;
+  return Intersect()(pt, tr);
 }
 CGAL_END_NAMESPACE
 
