@@ -197,26 +197,30 @@ template <class K>
 inline bool do_intersect(const Segment_2<K> &seg,
 			 const Line_2<K> &line)
 {
-  return typename K::Do_intersect_2()(seg, line);
+  typedef typename K::Do_intersect_2 Do_intersect;
+  return Do_intersect()(seg, line);
 }
 template <class K>
 inline bool do_intersect(const Line_2<K> &line,
 			 const Segment_2<K> &seg)
 {
-  return typename K::Do_intersect_2()(line, seg);
+  typedef typename K::Do_intersect_2 Do_intersect;
+  return Do_intersect_2(line, seg);
 }
 
 template <class K>
 inline Object
 intersection(const Line_2<K> &line, const Segment_2<K> &seg)
 {
-    return typename K::Intersect_2()(seg, line);
+  typedef typename K::Intersect_2 Intersect;
+  return Intersect()(seg, line);
 }
 template <class K>
 inline Object
 intersection(const Segment_2<K> &seg, const Line_2<K> &line)
 {
-    return typename K::Intersect_2()(line, seg);
+  typedef typename K::Intersect_2 Intersect;
+  return Intersect()(line, seg);
 }
 CGAL_END_NAMESPACE
 
