@@ -178,9 +178,10 @@ bool do_intersect(const typename CGAL_WRAP(K)::Triangle_2 &t1,
 
 template <class K>
 inline bool do_intersect(const Triangle_2<K> &t1, 
-			 const Triangle_2<K> &t2){
-
-  return typename K::Do_intersect_2()(t1,t2);
+			 const Triangle_2<K> &t2)
+{
+  typedef typename K::Do_intersect_2 Do_intersect;
+  return Do_intersect()(t1,t2);
 }
 
 CGAL_END_NAMESPACE
