@@ -1,3 +1,6 @@
+20 May 2004 Andreas Fabri
+- split return typename K::Something_2 in a typedef typename K::Something_2 Something; return Something (to please SunPro CC 5.3)
+
 14 May 2004 Sylvain Pion
 - sign_of_cross() : simplify code and remove warning.
 
